--- a/package.json
+++ b/package.json
@@ -6,18 +6,22 @@
   "scripts": {
     "build": "rimraf dist && npx tsc",
     "predev": "npm run build",
-    "dev": "cross-env NODE_ENV=DEV && concurrently \"npx tsc -w\" \"nodemon --inspect dist\"",
-    "start": "cross-env NODE_ENV=DEV && node dist"
+    "dev": "concurrently \"npx tsc -w\" \"nodemon --inspect dist\"",
+    "start": "node dist"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.16",
     "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^20.9.0",
     "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
